# CanIRunThisLLM

./: README.md  gitignore  pyproject.toml
CanIRunThisLLM/: db.sqlite3  manage.py
CanIRunThisLLM/CanIRunThisLLM/: asgi.py  settings.py  urls.py  wsgi.py
CanIRunThisLLM/CanIRunThisLLM/modelfiles/DeepSeek-R1-Distill-Qwen-7B-4bit/: config.json
CanIRunThisLLM/CanIRunThisLLM/modelfiles/Janus-Pro-7B/: config.json
CanIRunThisLLM/EstimateTokenPerSecond/: estimate_token_per_second.py
CanIRunThisLLM/ModelExtractor/: extractor.py
CanIRunThisLLM/System/: forms.py  models.py  urls.py  views.py
CanIRunThisLLM/System/management/commands/: import_llm_mappings.py  import_processors.py
CanIRunThisLLM/System/management/commands/json/: llm_database.json  m_series_database.json
CanIRunThisLLM/System/migrations/: 0001_initial.py  0002_applemseriesprocessor.py
CanIRunThisLLM/System/static/: canirunit.py  llm_map.json  vram_calc.py
CanIRunThisLLM/System/static/System/css/: stop_chart_styles.css
CanIRunThisLLM/System/static/System/js/: home.js
CanIRunThisLLM/System/templates/System/: home.html  stop_chart.html
CanIRunThisLLM/VRAMCalculator/: canirunit.py  vram_calc.py
CanIRunThisLLM/modelfiles/phi-4/: config.json
CanIRunThisLLM/modelfiles/safetensor/gemma-2-27b-it/: model.safetensors.index.json
CanIRunThisLLM/staticfiles/: pc_info.py
CanIRunThisLLM/staticfiles/System/css/: home_styles.css  stop_chart_styles.css
CanIRunThisLLM/staticfiles/System/js/: home.js
CanIRunThisLLM/staticfiles/css/: styles.css
CanIRunThisLLM/staticfiles/js/: home.js
(+1 files in other folders)
