[project]
name = "canirunthisllm"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordinho",email = "Jordi.buscaglia577@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.15.2,<4.0.0)",
    "gputil (>=1.4.0,<2.0.0)",
    "py-cpuinfo (>=9.0.0,<10.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "distutils-pytest (>=0.2.1,<0.3.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "huggingface-hub (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
